--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "node ./server.js"
+    "dev": "tsx ./server.ts"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +21,7 @@
     "@vitejs/plugin-vue": "^5.1.4",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
     "express": "^4.21.1",
+    "tsx": "^4.19.1",
     "vite": "^5.4.9"
   }
 }
