--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,5 @@
     "esModuleInterop": true,
     "lib": ["esnext", "dom"]
   },
-  "include": ["src", "server.js"]
+  "include": ["src", "server.ts"]
 }
