--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "tsx ./server.ts",
     "build:client": "vite build",
     "build:server": "vite build --ssr ./src/entry-server.ts",
-    "build": "npm run build:client && npm run build:server"
+    "build": "npm run build:client && npm run build:server",
+    "lint": "eslint ./src",
+    "format": "prettier --write ./src/**/*.{ts,vue}"
   },
   "keywords": [],
   "author": "",
@@ -21,10 +23,20 @@
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.7.5",
+    "@typescript-eslint/eslint-plugin": "^8.9.0",
+    "@typescript-eslint/parser": "^8.9.0",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
+    "eslint": "^9.12.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-define-config": "^2.1.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-vue": "^9.29.0",
     "express": "^4.21.1",
+    "prettier": "^3.3.3",
     "tsx": "^4.19.1",
-    "vite": "^5.4.9"
+    "vite": "^5.4.9",
+    "vue-eslint-parser": "^9.4.3"
   }
 }
