--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:server": "vite build --ssr ./src/entry-server.ts",
     "build": "npm run build:client && npm run build:server",
     "lint": "eslint --fix ./src",
-    "format": "prettier --write ./src/**/*.{ts,vue}"
+    "format": "prettier --write ./src/**/*.{ts,vue}",
+    "test": "vitest"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +23,7 @@
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
+    "@testing-library/vue": "^8.1.0",
     "@types/express": "^5.0.0",
     "@types/node": "^22.7.5",
     "@typescript-eslint/eslint-plugin": "^8.9.0",
@@ -34,9 +36,11 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-vue": "^9.29.0",
+    "happy-dom": "^15.7.4",
     "prettier": "^3.3.3",
     "tsx": "^4.19.1",
     "vite": "^5.4.9",
+    "vitest": "^2.1.3",
     "vue-eslint-parser": "^9.4.3"
   }
 }
